[tool.poetry]
name = "bismuthcore"
version = "0.0.19"
description = "[Alpha] Home of the BismuthCore Python Package"
authors = ["EggPool", "Aareon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polysign = "^0.1.4"
tornado = "^6.4"
concurrent-log-handler = "^0.9.25"
requests = "^2.31.0"
aioprocessing = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pytest = "^8.1.1"
coverage = "^7.4.4"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
